# rayHTMLib

./: CMakeLists.txt  README.md
include/: rayHTMLib.h
src/: rayHTMLib.cpp
src/core/: core.cpp  core.h
src/ui/: element.cpp  element.h
tests/: main.cpp
tests/assets/layouts/: testLayout.html
tests/assets/stylesheets/: testStylesheet.css
